修复栈的溢出问题

--- a/SailCUI.vcxproj
+++ b/SailCUI.vcxproj
@@ -104,6 +104,8 @@
       <LanguageStandard_C>stdc11</LanguageStandard_C>
       <LanguageStandard>Default</LanguageStandard>
       <EnableModules>true</EnableModules>
+      <WarningLevel>Level4</WarningLevel>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
